# M2-EventFunctionHandler

./: .gitignore  CMakeLists.txt  EventFunctionHandler.cpp  EventFunctionHandler.h  README.md  singleton.h
.github/workflows/: ci.yml
test/: main.cpp  test_compat.cpp  test_handles.cpp  test_mixed.cpp  test_pulse.cpp  test_query.cpp  test_safety.cpp  test_scale.cpp  test_seconds.cpp
test/stubs/: config.h  utils.h
